add banner all page

--- a/carts/templates/carts/checkout-done.html
+++ b/carts/templates/carts/checkout-done.html
@@ -2,6 +2,12 @@
 
 
 {% block content %}
+<div class='text-center'>
+         {% include 'others_page/snippets/banner.html' %}
+
+
+</div>
+<br>
 <div class='col-6 mx-auto py-5 text-center'>
   <h1 class='display-1'>Thank you for your order!!!</h1>
 </div>
