--- a/carts/templates/carts/checkout.html
+++ b/carts/templates/carts/checkout.html
@@ -3,6 +3,11 @@
 
 {% block content %}
 {% if not billing_profile %}
+    <div class='text-center'>
+         {% include 'others_page/snippets/banner.html' %}
+          <h1>Checkout</h1>
+
+      </div>
     <div class='row text-center'>
     <div class='col-12 col-md-6'>
         <p class='lead'>Login</p>
