--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -1,10 +1,30 @@
 {% extends "base.html" %}
+{% load crispy_forms_tags %}
 
 {% block content %}
-    <h1>Register</h1>
-    <form method='POST'> {% csrf_token %}
-      {{ form }}
-      <button type='submit' class='btn btn-default'>Submit</button>
+    <div class='text-center'>
+    {% include 'others_page/snippets/banner.html' %}
+    <h1 >Register</h1>
+<div>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 col-12 mx-auto">
+                     <form method='POST'> {% csrf_token %}
+      {{ form.as_p }}
+        <br>
+      <button type='submit' class='btn btn-primary'>Submit</button>
     </form>
+
+                </div>
+            </div>
+
+
+        </div>
+
+
+
+
+
 
 {% endblock %}
