--- a/products/templates/products/list.html
+++ b/products/templates/products/list.html
@@ -1,20 +1,20 @@
 {% extends "base.html" %}
 
 {% block content %}
+
+    <div class='text-center'>
+         {% include 'others_page/snippets/banner.html' %}
+          <h1>Products</h1>
+
+      </div>
         <div class='row'>
 
     {% for obj in object_list %}
-        <div class='col'>
+        <div class='col-md-3'>
         {{ forloop.counter }}
         {% include 'products/snippets/card.html' with instance=obj %}
 
-        {% if forloop.counter|divisibleby:3 %}
-         </div> </div><div class='row'><div class='col-12'><hr/></div>
-        {% elif forloop.counter|divisibleby:2 %}
-            </div> </div><div class='row'><div class='col-12'><hr/></div>
-        {% else %}
-         </div>
-        {% endif %}
+        </div>
 
 
     {% endfor %}
