--- a/products/templates/products/snippets/card.html
+++ b/products/templates/products/snippets/card.html
@@ -1,10 +1,12 @@
-<div class="card" style="width: 20rem;">
+<div class="card" style="" >
   {% if instance.image %}
-    <a href="{{ instance.get_absolute_url }}"><img class="card-img-top" src="{{ instance.image.url }}" alt="{{ instance.title}} logo"></a>
+    <a href="{{ instance.get_absolute_url }}"><img class="card-img-top" src="{{ instance.image.url }}" style="height: 100px;" alt="{{ instance.title}} logo"></a>
     {% endif %}
   <div class="card-body">
     <h4 class="card-title">{{ instance.title }}</h4>
     <p class="card-text">{{ instance.description|linebreaks|truncatewords:14 }}</p>
+    <br>
+    <p class="card-text">{{ instance.price }} BDT</p>
     <a href="{{ instance.get_absolute_url }}" class="btn btn-primary">View</a>
         {% include 'products/snippets/update-cart.html' with product=instance cart=cart %}
    <!--  <a href="{% url 'products:detail' slug=instance.slug  %}" class="btn btn-warning">URL shortcut</a> -->
