--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -9,10 +9,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-3">
    <div class='container'>
-  <a class="navbar-brand" href="{{ home_url }}">
-    <img src="http://getbootstrap.com/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="">
-    {% if brand_name %} {{brand_name }} {% else %}CFE eCommerce {% endif %}
-  </a>
+
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -20,7 +17,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item {% if request.path == home_url %}active{% endif %}">
-        <a class="nav-link" href="{{ home_url }}">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="{{ home_url }}">Easybazar <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item {% if request.path == contact_url %}active{% endif %}">
         <a class="nav-link" href="{{ contact_url }}">Contact</a>
@@ -54,16 +51,7 @@
       <li class="nav-item {% if request.path == cart_url %}active{% endif %}">
         <a class="nav-link" href="{{ cart_url }}"> <span class='navbar-cart-count'>{{ request.session.cart_items }}</span>  <i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
       </li>
-        <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Dropdown link
-            </a>
-            <div class="dropdown-menu dropdown-menu-left" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
-          </li>
+
 
     </ul>
     {% include 'search/snippets/search-form.html' %}
