--- a/templates/contact/view.html
+++ b/templates/contact/view.html
@@ -3,8 +3,9 @@
 
 {% block content %}
 <div class='text-center'>
+         {% include 'others_page/snippets/banner.html' %}
           <h1>{{ title }}</h1>
-          <h1>Hello, world we're working!</h1>
+
       </div>
       <div class='container'>
       <div class='row'>
@@ -14,7 +15,7 @@
               <p>{{ content }}</p>
             <form class='contact-form' method='POST' action='{% url "contact" %}'> {% csrf_token %}
               {{ form.as_p }}
-              <button type='submit' class='btn btn-default'>Submit</button>
+              <button type='submit' class='btn btn-primary'>Submit</button>
             </form>
 
 
